# webserver-base

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  multiserver.py  output.txt  ping.py  server.py  setup.cfg  setup.py
docs/: index.md
tests/: conftest.py  test_base.py
webserver/: README.md  __init__.py  cli.py  client.py  clientmodel.py  requirements.txt  server.py  servermodel.py  timing.py
