[metadata]
name = webserver-base
version = 0.1.0
author = Chino Franco
description = Python-based socket server and client
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
url = https://github.com/jgfranco17/webserver-base
keywords = python3 sockets network
project_urls =
    Documentation = https://github.com/jgfranco17/webserver-base/blob/main/docs/index.md

[options]
packages = webserver-base
install_requires = 
  numpy==1.23.5

[options.entry_points]
console_scripts =
  webserver = webserver.__main__:main